# aquestalk-rs

./: Cargo.toml  LICENSE  README.md  publish.yml
.github/workflows/: publish.yml  test.yml
aquestalk/: Cargo.toml  README.md
aquestalk/examples/basic/: Cargo.toml
aquestalk/examples/basic/src/: main.rs
aquestalk/src/: aquestalk.rs  lib.rs
examples/: basic.rs
libaquestalk-sys/: Cargo.toml
libaquestalk-sys/src/: ffi.rs  lib.rs
libaquestalk2-sys/: Cargo.toml
libaquestalk2-sys/src/: ffi.rs  lib.rs
src/: aquestalk.rs  lib.rs
